Alignment fix

--- a/laravel/public/css/master.css
+++ b/laravel/public/css/master.css
@@ -165,6 +165,7 @@ CONTENT
 #content
 {
     /* Width is set below in @media */
+    margin-top: 100px;
     margin-left: auto;
     margin-right: auto;
     color: black;
